[featurestore] scala notebook bugfix

--- a/notebooks/featurestore/FeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourScala.ipynb
@@ -722,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hops.createFeaturegroup(\"teams_features_spanish\").setDataframe(teamsFeaturesDf2).setFeaturestore(Hops.getProjectFeaturestore.read).setJobName(null).setDependencies(List[String]().asJava).setPrimaryKey(null).setDescriptiveStats(false).setFeatureCorr(false).setFeatureHistograms(false).setClusterAnalysis(false).setStatColumns(List[String]().asJava).setNumBins(5).setCorrMethod(\"pearson\").setDescription(\"a spanish version of teams_features\").setVersion(1).write()"
+    "Hops.createFeaturegroup(\"teams_features_spanish\").setDataframe(teamsFeaturesDf2).setFeaturestore(Hops.getProjectFeaturestore.read).setPrimaryKey(null).setDescriptiveStats(false).setFeatureCorr(false).setFeatureHistograms(false).setClusterAnalysis(false).setStatColumns(List[String]().asJava).setNumBins(5).setCorrMethod(\"pearson\").setDescription(\"a spanish version of teams_features\").setVersion(1).write()"
    ]
   },
   {
@@ -2277,7 +2277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hops.createTrainingDataset(\"team_position_prediction\").setDataframe(featuresDf).setSpark(spark).setFeaturestore(Hops.getProjectFeaturestore.read()).setVersion(1).setDescription(\"a dataset with features for football teams, used for training a model to predict league-position\").setJobName(null).setDataFormat(\"tfrecords\").setDependencies(List[String]().asJava).setDescriptiveStats(false).setFeatureCorr(false).setFeatureHistograms(false).setClusterAnalysis(false).setStatColumns(statColumns).setNumBins(5).setCorrMethod(\"pearson\").setNumClusters(5).write()"
+    "Hops.createTrainingDataset(\"team_position_prediction\").setDataframe(featuresDf).setSpark(spark).setFeaturestore(Hops.getProjectFeaturestore.read()).setVersion(1).setDescription(\"a dataset with features for football teams, used for training a model to predict league-position\").setDataFormat(\"tfrecords\").setDescriptiveStats(false).setFeatureCorr(false).setFeatureHistograms(false).setClusterAnalysis(false).setStatColumns(statColumns).setNumBins(5).setCorrMethod(\"pearson\").setNumClusters(5).write()"
    ]
   },
   {
@@ -3197,5 +3197,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
