[HOPSWORKS-1378][featurestore] composite key DDL support

--- a/notebooks/featurestore/FeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourScala.ipynb
@@ -722,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hops.createFeaturegroup(\"teams_features_spanish\").setDataframe(teamsFeaturesDf2).setFeaturestore(Hops.getProjectFeaturestore.read).setPrimaryKey(null).setDescriptiveStats(false).setFeatureCorr(false).setFeatureHistograms(false).setClusterAnalysis(false).setStatColumns(List[String]().asJava).setNumBins(5).setCorrMethod(\"pearson\").setDescription(\"a spanish version of teams_features\").setVersion(1).write()"
+    "Hops.createFeaturegroup(\"teams_features_spanish\").setDataframe(teamsFeaturesDf2).setFeaturestore(Hops.getProjectFeaturestore.read).setDescriptiveStats(false).setFeatureCorr(false).setFeatureHistograms(false).setClusterAnalysis(false).setStatColumns(List[String]().asJava).setNumBins(5).setCorrMethod(\"pearson\").setDescription(\"a spanish version of teams_features\").setVersion(1).write()"
    ]
   },
   {
@@ -1105,7 +1105,7 @@
     "                         .setHudi(true)\n",
     "                         .setPartitionBy(partitionCols)\n",
     "                         .setDataframe(sampleDf)\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKeys(List(\"id\")).write())"
    ]
   },
   {
@@ -1171,7 +1171,7 @@
     "                         .setDataframe(sampleDf)\n",
     "                         .setHudiBasePath(s\"hdfs:///Projects/${Hops.getProjectName}/Resources/hudi_featuregroup_test_tour_second\")\n",
     "                         .setHudiArgs(hudiArgs)\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKeys(List(\"id\")).write())"
    ]
   },
   {
@@ -1249,7 +1249,7 @@
     "                         .setPartitionBy(partitionCols)\n",
     "                         .setDataframe(upsertDf)\n",
     "                         .setMode(\"append\")\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKeys(List(\"id\")).write())"
    ]
   },
   {
