--- a/notebooks/featurestore/hudi/HudiOnHops.ipynb
+++ b/notebooks/featurestore/hudi/HudiOnHops.ipynb
@@ -1300,7 +1300,7 @@
     "                         .setHudi(true)\n",
     "                         .setPartitionBy(partitionCols)\n",
     "                         .setDataframe(sampleDf)\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKeys(List(\"id\")).write())"
    ]
   },
   {
@@ -1366,7 +1366,7 @@
     "                         .setDataframe(sampleDf)\n",
     "                         .setHudiBasePath(s\"hdfs:///Projects/${Hops.getProjectName}/Resources/hudi_featuregroup_test_second\")\n",
     "                         .setHudiArgs(hudiArgs)\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKeys(List(\"id\")).write())"
    ]
   },
   {
@@ -1444,7 +1444,7 @@
     "                         .setPartitionBy(partitionCols)\n",
     "                         .setDataframe(upsertDf)\n",
     "                         .setMode(\"append\")\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKeys(List(\"id\")).write())"
    ]
   },
   {
@@ -1548,5 +1548,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
