Composite key scala featurestore tour

--- a/notebooks/featurestore/FeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourScala.ipynb
@@ -86,7 +86,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>29</td><td>application_1567416459580_0032</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1567416459580_0032/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1567416459580_0032_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>7</td><td>application_1571823648811_0100</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-16-142.eu-north-1.compute.internal:8088/proxy/application_1571823648811_0100/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-16-142.eu-north-1.compute.internal:8042/node/containerlogs/container_e01_1571823648811_0100_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
     "                         .setHudi(true)\n",
     "                         .setPartitionBy(partitionCols)\n",
     "                         .setDataframe(sampleDf)\n",
-    "                         .setPrimaryKeys(List(\"id\")).write())"
+    "                         .setPrimaryKey(List(\"id\")).write())"
    ]
   },
   {
@@ -1120,10 +1120,10 @@
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
       "|_hoodie_commit_time|_hoodie_commit_seqno|_hoodie_record_key|_hoodie_partition_path|   _hoodie_file_name| id| value|country|         date|\n",
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
-      "|     20190904142029|  20190904142029_1_2|                 2|         1556668800000|11c3eb95-86c9-4c3...|  2|1.2151|Ireland|1556668800000|\n",
-      "|     20190904142029|  20190904142029_2_3|                 3|         1565049600000|53a66f65-2e49-41f...|  3|0.2151|Belgium|1565049600000|\n",
-      "|     20190904142029|  20190904142029_0_1|                 1|         1551484800000|6cfffc08-6bff-46b...|  1|0.4151| Sweden|1551484800000|\n",
-      "|     20190904142029|  20190904142029_3_4|                 4|         1565049600000|e08e3755-a883-4d1...|  4|0.8151| Russia|1565049600000|\n",
+      "|     20191029122939|  20191029122939_1_2|                 2|         1556668800000|1b999ce4-326f-444...|  2|1.2151|Ireland|1556668800000|\n",
+      "|     20191029122939|  20191029122939_2_3|                 3|         1565049600000|15557ba2-908d-4ca...|  3|0.2151|Belgium|1565049600000|\n",
+      "|     20191029122939|  20191029122939_0_1|                 1|         1551484800000|54149c42-f8db-471...|  1|0.4151| Sweden|1551484800000|\n",
+      "|     20191029122939|  20191029122939_3_4|                 4|         1565049600000|52aa3ef9-caf2-423...|  4|0.8151| Russia|1565049600000|\n",
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
       "\n"
      ]
@@ -1171,7 +1171,7 @@
     "                         .setDataframe(sampleDf)\n",
     "                         .setHudiBasePath(s\"hdfs:///Projects/${Hops.getProjectName}/Resources/hudi_featuregroup_test_tour_second\")\n",
     "                         .setHudiArgs(hudiArgs)\n",
-    "                         .setPrimaryKeys(List(\"id\")).write())"
+    "                         .setPrimaryKey(List(\"id\")).write())"
    ]
   },
   {
@@ -1186,10 +1186,10 @@
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
       "|_hoodie_commit_time|_hoodie_commit_seqno|_hoodie_record_key|_hoodie_partition_path|   _hoodie_file_name| id| value|country|         date|\n",
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
-      "|     20190904142226|  20190904142226_1_6|                 2|         1556668800000|2259727b-66f9-49a...|  2|1.2151|Ireland|1556668800000|\n",
-      "|     20190904142226|  20190904142226_2_7|                 3|         1565049600000|aefcc523-4fc1-4e0...|  3|0.2151|Belgium|1565049600000|\n",
-      "|     20190904142226|  20190904142226_3_8|                 4|         1565049600000|804903f6-0f3c-47a...|  4|0.8151| Russia|1565049600000|\n",
-      "|     20190904142226|  20190904142226_0_5|                 1|         1551484800000|63576674-feaa-47a...|  1|0.4151| Sweden|1551484800000|\n",
+      "|     20191029122957|  20191029122957_2_7|                 3|         1565049600000|cdf34108-478f-4ca...|  3|0.2151|Belgium|1565049600000|\n",
+      "|     20191029122957|  20191029122957_1_6|                 2|         1556668800000|a9921797-a938-471...|  2|1.2151|Ireland|1556668800000|\n",
+      "|     20191029122957|  20191029122957_0_5|                 1|         1551484800000|2bf80b86-2467-4cc...|  1|0.4151| Sweden|1551484800000|\n",
+      "|     20191029122957|  20191029122957_3_8|                 4|         1565049600000|afd057f3-a3d2-406...|  4|0.8151| Russia|1565049600000|\n",
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
       "\n"
      ]
@@ -1249,7 +1249,25 @@
     "                         .setPartitionBy(partitionCols)\n",
     "                         .setDataframe(upsertDf)\n",
     "                         .setMode(\"append\")\n",
-    "                         .setPrimaryKeys(List(\"id\")).write())"
+    "                         .setPrimaryKey(List(\"id\")).write())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "timeline: org.apache.hudi.common.table.HoodieTimeline = org.apache.hudi.common.table.timeline.HoodieDefaultTimeline: [20191029122939__commit__COMPLETED],[20191029123009__commit__COMPLETED]\n"
+     ]
+    }
+   ],
+   "source": [
+    "val timeline = HoodieDataSourceHelpers.allCompletedCommitsCompactions(FileSystem.get(sc.hadoopConfiguration), \n",
+    "                                     s\"hdfs:///Projects/${Hops.getProjectName}/Resources/hudi_featuregroup_test_tour_1\")"
    ]
   },
   {
@@ -1261,13 +1279,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "timeline: org.apache.hudi.common.table.HoodieTimeline = org.apache.hudi.common.table.timeline.HoodieDefaultTimeline: [20190904142029__commit__COMPLETED],[20190904142302__commit__COMPLETED]\n"
+      "firstTimestamp: String = 20191029122939\n"
      ]
     }
    ],
    "source": [
-    "val timeline = HoodieDataSourceHelpers.allCompletedCommitsCompactions(FileSystem.get(sc.hadoopConfiguration), \n",
-    "                                     s\"hdfs:///Projects/${Hops.getProjectName}/Resources/hudi_featuregroup_test_tour_1\")"
+    "val firstTimestamp = timeline.firstInstant.get.getTimestamp"
    ]
   },
   {
@@ -1279,24 +1296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "firstTimestamp: String = 20190904142029\n"
-     ]
-    }
-   ],
-   "source": [
-    "val firstTimestamp = timeline.firstInstant.get.getTimestamp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "secondTimestamp: String = 20190904142302\n"
+      "secondTimestamp: String = 20191029123009\n"
      ]
     }
    ],
