[HOPSWORKS-1378][featurestore][append] composite key DDL support (#98)
* [HOPSWORKS-1378][featurestore] composite key DDL support

* Composite key scala featurestore tour

* Composite key hudi tour

* Composite key featurestore_tour

--- a/notebooks/featurestore/hudi/HudiOnHops.ipynb
+++ b/notebooks/featurestore/hudi/HudiOnHops.ipynb
@@ -121,7 +121,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>25</td><td>application_1567416459580_0027</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1567416459580_0027/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1567416459580_0027_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>9</td><td>application_1571823648811_0102</td><td>spark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-16-142.eu-north-1.compute.internal:8088/proxy/application_1571823648811_0102/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-16-142.eu-north-1.compute.internal:8042/node/containerlogs/container_e01_1571823648811_0102_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1300,7 +1300,7 @@
     "                         .setHudi(true)\n",
     "                         .setPartitionBy(partitionCols)\n",
     "                         .setDataframe(sampleDf)\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKey(List(\"id\")).write())"
    ]
   },
   {
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,12 +1366,12 @@
     "                         .setDataframe(sampleDf)\n",
     "                         .setHudiBasePath(s\"hdfs:///Projects/${Hops.getProjectName}/Resources/hudi_featuregroup_test_second\")\n",
     "                         .setHudiArgs(hudiArgs)\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKey(List(\"id\")).write())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1381,10 +1381,10 @@
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
       "|_hoodie_commit_time|_hoodie_commit_seqno|_hoodie_record_key|_hoodie_partition_path|   _hoodie_file_name| id| value|country|         date|\n",
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
-      "|     20190904115649| 20190904115649_1_14|                 2|         1556668800000|7892d2e5-e720-452...|  2|1.2151|Ireland|1556668800000|\n",
-      "|     20190904115649| 20190904115649_2_15|                 3|         1565049600000|617dd146-e3f2-4ce...|  3|0.2151|Belgium|1565049600000|\n",
-      "|     20190904115649| 20190904115649_3_16|                 4|         1565049600000|6c5c0044-3ffd-4e3...|  4|0.8151| Russia|1565049600000|\n",
-      "|     20190904115649| 20190904115649_0_13|                 1|         1551484800000|ee739f1a-f7b2-4fc...|  1|0.4151| Sweden|1551484800000|\n",
+      "|     20191029123951| 20191029123951_2_11|                 3|         1565049600000|54cbcf61-8a4b-413...|  3|0.2151|Belgium|1565049600000|\n",
+      "|     20191029123951| 20191029123951_1_10|                 2|         1556668800000|12da84f8-4b8e-4cb...|  2|1.2151|Ireland|1556668800000|\n",
+      "|     20191029123951| 20191029123951_3_12|                 4|         1565049600000|9b9ed741-eafb-4ca...|  4|0.8151| Russia|1565049600000|\n",
+      "|     20191029123951|  20191029123951_0_9|                 1|         1551484800000|5101dd1d-6735-47e...|  1|0.4151| Sweden|1551484800000|\n",
       "+-------------------+--------------------+------------------+----------------------+--------------------+---+------+-------+-------------+\n",
       "\n"
      ]
@@ -1444,7 +1444,7 @@
     "                         .setPartitionBy(partitionCols)\n",
     "                         .setDataframe(upsertDf)\n",
     "                         .setMode(\"append\")\n",
-    "                         .setPrimaryKey(\"id\").write())"
+    "                         .setPrimaryKey(List(\"id\")).write())"
    ]
   },
   {
@@ -1548,5 +1548,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
