--- a/notebooks/ml/Experiment/PyTorch/mnist.ipynb
+++ b/notebooks/ml/Experiment/PyTorch/mnist.ipynb
@@ -7,13 +7,13 @@
     "# Simple PyTorch mnist experiment\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with pytorch 1.0.0</h3></font>\n",
-    "<font color='red'> <h3>Tested with torchvision 0.2.1</h3></font>"
+    "<font color='red'> <h3>Tested with pytorch 1.3.1</h3></font>\n",
+    "<font color='red'> <h3>Tested with torchvision 0.4.2</h3></font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "    import torch.nn.functional as F\n",
     "    import torch.optim as optim\n",
     "    from torchvision import datasets, transforms\n",
+    "    from torch.utils.tensorboard import SummaryWriter    \n",
     "    import os\n",
     "    from hops import tensorboard\n",
     "    from hops import hdfs\n",
@@ -47,7 +48,7 @@
     "            x = self.fc2(x)\n",
     "            return F.log_softmax(x, dim=1)\n",
     "\n",
-    "    def train(model, device, train_loader, optimizer):\n",
+    "    def train(model, device, train_loader, optimizer, writer):\n",
     "        model.train()\n",
     "        for batch_idx, (data, target) in enumerate(train_loader):\n",
     "            data, target = data.to(device), target.to(device)\n",
@@ -60,6 +61,7 @@
     "                print('[{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
     "                    batch_idx * len(data), len(train_loader.dataset),\n",
     "                    100. * batch_idx / len(train_loader), loss.item()))\n",
+    "                writer.add_scalar('Loss/train', loss.item(), batch_idx)\n",
     "\n",
     "    def test(model, device, test_loader):\n",
     "        model.eval()\n",
@@ -88,13 +90,16 @@
     "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
     "\n",
     "    kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
+    "    \n",
+    "    # Set SummaryWriter to point to the local directory containing the tensorboard logs\n",
+    "    writer = SummaryWriter(log_dir=tensorboard.logdir())\n",
     "\n",
     "    # The same working directory may be used multiple times if running multiple experiments\n",
     "    # Make sure we only download the dataset once\n",
-    "    if not os.path.exists(os.getcwd() + '/processed'):\n",
+    "    if not os.path.exists(os.getcwd() + '/MNIST'):\n",
     "        hdfs.log('----Downloading dataset to Spark executor working directory----')\n",
     "        #Copy dataset from project to local filesystem\n",
-    "        hdfs.copy_to_local('TourData/mnist/processed')\n",
+    "        hdfs.copy_to_local('TourData/mnist/MNIST')\n",
     "        hdfs.log('----------------------Download finished------------------------')\n",
     "    train_loader = torch.utils.data.DataLoader(\n",
     "        datasets.MNIST(os.getcwd(), train=True, download=False,\n",
@@ -116,7 +121,7 @@
     "    optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.5)\n",
     "\n",
     "    #Single epoch\n",
-    "    train(model, device, train_loader, optimizer)\n",
+    "    train(model, device, train_loader, optimizer, writer)\n",
     "    test(model, device, test_loader)\n",
     "\n",
     "\n",
@@ -125,19 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished Experiment \n",
-      "\n",
-      "'hdfs://10.0.104.196:8020/Projects/demo_deep_learning_robineri/Experiments/application_1549714785003_0121/launcher/run.7'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hops import experiment\n",
     "# Simple experiment, local_logdir=True to write to local FS and not HDFS (Look in Experiments dataset for contents after experiment)\n",
@@ -162,5 +157,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
