--- a/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
@@ -4,13 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Differential Evolution PyTorch mnist experiment\n",
+    "# Simple PyTorch mnist experiment\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with pytorch 1.0.0</h3></font>\n",
-    "<font color='red'> <h3>Tested with torchvision 0.2.1</h3></font>\n",
-    "\n",
-    "### Without a GPU this code is very slow"
+    "<font color='red'> <h3>Tested with pytorch 1.3.1</h3></font>\n",
+    "<font color='red'> <h3>Tested with torchvision 0.4.2</h3></font>"
    ]
   },
   {
@@ -19,13 +17,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wrapper(lr, momentum):\n",
+    "def wrapper():\n",
     "    import argparse\n",
     "    import torch\n",
     "    import torch.nn as nn\n",
     "    import torch.nn.functional as F\n",
     "    import torch.optim as optim\n",
     "    from torchvision import datasets, transforms\n",
+    "    from torch.utils.tensorboard import SummaryWriter    \n",
     "    import os\n",
     "    from hops import tensorboard\n",
     "    from hops import hdfs\n",
@@ -49,7 +48,7 @@
     "            x = self.fc2(x)\n",
     "            return F.log_softmax(x, dim=1)\n",
     "\n",
-    "    def train(model, device, train_loader, optimizer):\n",
+    "    def train(model, device, train_loader, optimizer, writer):\n",
     "        model.train()\n",
     "        for batch_idx, (data, target) in enumerate(train_loader):\n",
     "            data, target = data.to(device), target.to(device)\n",
@@ -62,6 +61,7 @@
     "                print('[{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
     "                    batch_idx * len(data), len(train_loader.dataset),\n",
     "                    100. * batch_idx / len(train_loader), loss.item()))\n",
+    "                writer.add_scalar('Loss/train', loss.item(), batch_idx)\n",
     "\n",
     "    def test(model, device, test_loader):\n",
     "        model.eval()\n",
@@ -80,8 +80,6 @@
     "        print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
     "            test_loss, correct, len(test_loader.dataset),\n",
     "            100. * correct / len(test_loader.dataset)))\n",
-    "        \n",
-    "        return (100. * correct / len(test_loader.dataset))\n",
     "\n",
     "\n",
     "    # Training settings\n",
@@ -92,13 +90,16 @@
     "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
     "\n",
     "    kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
+    "    \n",
+    "    # Set SummaryWriter to point to the local directory containing the tensorboard logs\n",
+    "    writer = SummaryWriter(log_dir=tensorboard.logdir())\n",
     "\n",
     "    # The same working directory may be used multiple times if running multiple experiments\n",
     "    # Make sure we only download the dataset once\n",
-    "    if not os.path.exists(os.getcwd() + '/processed'):\n",
+    "    if not os.path.exists(os.getcwd() + '/MNIST'):\n",
     "        hdfs.log('----Downloading dataset to Spark executor working directory----')\n",
     "        #Copy dataset from project to local filesystem\n",
-    "        hdfs.copy_to_local('TourData/mnist/processed')\n",
+    "        hdfs.copy_to_local('TourData/mnist/MNIST')\n",
     "        hdfs.log('----------------------Download finished------------------------')\n",
     "    train_loader = torch.utils.data.DataLoader(\n",
     "        datasets.MNIST(os.getcwd(), train=True, download=False,\n",
@@ -117,25 +118,14 @@
     "\n",
     "\n",
     "    model = Net().to(device)\n",
-    "    optimizer = optim.SGD(model.parameters(), lr=lr, momentum=momentum)\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.5)\n",
     "\n",
     "    #Single epoch\n",
-    "    train(model, device, train_loader, optimizer)\n",
-    "    acc = test(model, device, test_loader)\n",
-    "    \n",
-    "    # No need to save model when doing hyperparameter optimization\n",
-    "    # torch.save(model.state_dict(), tensorboard.logdir() + \"mnist_cnn.pt\")\n",
-    "    \n",
-    "    return acc\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "search_dict = {'lr': [0.1, 0.001], 'momentum': [0.1, 0.9]}"
+    "    train(model, device, train_loader, optimizer, writer)\n",
+    "    test(model, device, test_loader)\n",
+    "\n",
+    "\n",
+    "    torch.save(model.state_dict(), tensorboard.logdir() + \"mnist_cnn.pt\")\n"
    ]
   },
   {
@@ -146,7 +136,7 @@
    "source": [
     "from hops import experiment\n",
     "# Simple experiment, local_logdir=True to write to local FS and not HDFS (Look in Experiments dataset for contents after experiment)\n",
-    "experiment.differential_evolution(wrapper, search_dict, generations=4, population=5, local_logdir=True, direction='max')"
+    "experiment.launch(wrapper, local_logdir=True)"
    ]
   }
  ],
@@ -167,5 +157,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
