Update Scale notebooks

--- a/notebooks/featurestore/FeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourPython.ipynb
@@ -2906,7 +2906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you might have notived earlier in this notebook, the `create_featuregroup` methods has arguments for configuring the statistics to be computed as data is added. These settings will be saved along with the rest of the meta data about the featuregroup and will be applied when new data is inserted into the featuregroup using the `insert_into_featuregroup` method.\n",
+    "As you might have notived earlier in this notebook, the `create_featuregroup` method has arguments for configuring the statistics to be computed as data is added. These settings will be saved along with the rest of the meta data about the featuregroup and will be applied when new data is inserted into the featuregroup using the `insert_into_featuregroup` method.\n",
     "\n",
     "You can use the `update_featuregroup_stats()` method to update the settings for the statistics of a feature group and recompute the statistics without inserting any new data. By default it will compute the statistics based on the previous settings, use the project's featurestore and use version 1 of the featuregroup:"
    ]
