--- a/notebooks/featurestore/online_featurestore/OnlineFeaturestoreTourScala.ipynb
+++ b/notebooks/featurestore/online_featurestore/OnlineFeaturestoreTourScala.ipynb
@@ -188,7 +188,7 @@
     "(Hops.createFeaturegroup(\"test_online_fg_scala_sdk\")\n",
     "     .setDataframe(sampleDf)\n",
     "     .setOnline(true)\n",
-    "     .setPrimaryKey(\"id\")\n",
+    "     .setPrimaryKey(List(\"id\"))\n",
     "     .write())"
    ]
   },
@@ -224,7 +224,7 @@
     "(Hops.createFeaturegroup(\"test_online_fg_scala_sdk_types\")\n",
     "     .setDataframe(sampleDf2)\n",
     "     .setOnline(true)\n",
-    "     .setPrimaryKey(\"id\")\n",
+    "     .setPrimaryKey(List(\"id\"))\n",
     "     .setOnlineTypes(onlineTypes)\n",
     "     .write())"
    ]
@@ -739,7 +739,7 @@
     "\n",
     "(Hops.createFeaturegroup(\"enable_online_features_test_scala_sdk\")\n",
     "                         .setDataframe(sampleDf)\n",
-    "                         .setPrimaryKey(\"id\")\n",
+    "                         .setPrimaryKey(List(\"id\"))\n",
     "                         .write())"
    ]
   },
@@ -908,5 +908,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
