--- a/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
@@ -4,27 +4,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple PyTorch mnist experiment\n",
+    "# Differential Evolution PyTorch mnist experiment\n",
     "---\n",
     "\n",
     "<font color='red'> <h3>Tested with pytorch 1.3.1</h3></font>\n",
-    "<font color='red'> <h3>Tested with torchvision 0.4.2</h3></font>"
+    "<font color='red'> <h3>Tested with torchvision 0.4.2</h3></font>\n",
+    "\n",
+    "### Without a GPU this code is very slow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>7</td><td>application_1573559087487_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hdptest8.north.sics.se:8088/proxy/application_1573559087487_0009/\">Link</a></td><td><a target=\"_blank\" href=\"http://hdptest8.north.sics.se:8042/node/containerlogs/container_e01_1573559087487_0009_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
-    "def wrapper():\n",
+    "def wrapper(lr, momentum):\n",
     "    import argparse\n",
     "    import torch\n",
     "    import torch.nn as nn\n",
     "    import torch.nn.functional as F\n",
     "    import torch.optim as optim\n",
     "    from torchvision import datasets, transforms\n",
-    "    from torch.utils.tensorboard import SummaryWriter    \n",
+    "    from torch.utils.tensorboard import SummaryWriter \n",
     "    import os\n",
     "    from hops import tensorboard\n",
     "    from hops import hdfs\n",
@@ -80,6 +110,8 @@
     "        print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
     "            test_loss, correct, len(test_loader.dataset),\n",
     "            100. * correct / len(test_loader.dataset)))\n",
+    "        \n",
+    "        return (100. * correct / len(test_loader.dataset))\n",
     "\n",
     "\n",
     "    # Training settings\n",
@@ -92,7 +124,7 @@
     "    kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
     "    \n",
     "    # Set SummaryWriter to point to the local directory containing the tensorboard logs\n",
-    "    writer = SummaryWriter(log_dir=tensorboard.logdir())\n",
+    "    writer = SummaryWriter(log_dir=tensorboard.logdir())    \n",
     "\n",
     "    # The same working directory may be used multiple times if running multiple experiments\n",
     "    # Make sure we only download the dataset once\n",
@@ -118,25 +150,48 @@
     "\n",
     "\n",
     "    model = Net().to(device)\n",
-    "    optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.5)\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=lr, momentum=momentum)\n",
     "\n",
     "    #Single epoch\n",
     "    train(model, device, train_loader, optimizer, writer)\n",
-    "    test(model, device, test_loader)\n",
-    "\n",
-    "\n",
-    "    torch.save(model.state_dict(), tensorboard.logdir() + \"mnist_cnn.pt\")\n"
+    "    acc = test(model, device, test_loader)\n",
+    "    \n",
+    "    # No need to save model when doing hyperparameter optimization\n",
+    "    # torch.save(model.state_dict(), tensorboard.logdir() + \"mnist_cnn.pt\")\n",
+    "    \n",
+    "    return acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 0 || average metric: 98.81800000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Generation 1 || average metric: 98.82000000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Generation 2 || average metric: 98.82000000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Generation 3 || average metric: 98.82000000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Generation 4 || average metric: 98.82000000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://10.0.208.8:8020/Projects/demo_deep_learning_admin000/Experiments/application_1573559087487_0009/differential_evolution/run.1', {'lr': '0.1', 'momentum': '0.5231567238497797'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
-    "# Simple experiment, local_logdir=True to write to local FS and not HDFS (Look in Experiments dataset for contents after experiment)\n",
-    "experiment.launch(wrapper, local_logdir=True)"
+    "\n",
+    "search_dict = {'lr': [0.1, 0.001], 'momentum': [0.1, 0.9]}\n",
+    "experiment.differential_evolution(wrapper, search_dict, generations=4, population=5, local_logdir=True, direction='max')"
    ]
   }
  ],
