Fix Hudi configuration

--- a/notebooks/featurestore/hudi/HudiOnHops.ipynb
+++ b/notebooks/featurestore/hudi/HudiOnHops.ipynb
@@ -332,6 +332,7 @@
     "              .option(\"hoodie.datasource.hive_sync.database\", hiveDb)\n",
     "              .option(\"hoodie.datasource.hive_sync.jdbcurl\", jdbcUrl)\n",
     "              .option(\"hoodie.datasource.hive_sync.partition_fields\", \"date\")\n",
+    "              .option(\"hoodie.datasource.hive_sync.partition_extractor_class\", \"org.apache.hudi.hive.MultiPartKeysValueExtractor\")\n",
     "              .mode(\"overwrite\"))\n",
     "writer.save(s\"hdfs:///Projects/${Hops.getProjectName}/Resources/hello_hudi_1\")"
    ]
@@ -767,6 +768,7 @@
     "              .option(\"hoodie.datasource.hive_sync.database\", hiveDb)\n",
     "              .option(\"hoodie.datasource.hive_sync.jdbcurl\", jdbcUrl)\n",
     "              .option(\"hoodie.datasource.hive_sync.partition_fields\", \"date\")\n",
+    "              .option(\"hoodie.datasource.hive_sync.partition_extractor_class\", \"org.apache.hudi.hive.MultiPartKeysValueExtractor\")\n",
     "              .mode(\"append\"))\n",
     "writer.save(s\"hdfs:///Projects/${Hops.getProjectName}/Resources/hello_hudi_1\")"
    ]
