[HOPSWORKS-1418] upgrade pytorch and examples to 1.3.1 and add a tensorboard example (#102)

--- a/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
@@ -7,17 +7,45 @@
     "# Differential Evolution PyTorch mnist experiment\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with pytorch 1.0.0</h3></font>\n",
-    "<font color='red'> <h3>Tested with torchvision 0.2.1</h3></font>\n",
+    "<font color='red'> <h3>Tested with pytorch 1.3.1</h3></font>\n",
+    "<font color='red'> <h3>Tested with torchvision 0.4.2</h3></font>\n",
     "\n",
     "### Without a GPU this code is very slow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>7</td><td>application_1573559087487_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hdptest8.north.sics.se:8088/proxy/application_1573559087487_0009/\">Link</a></td><td><a target=\"_blank\" href=\"http://hdptest8.north.sics.se:8042/node/containerlogs/container_e01_1573559087487_0009_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def wrapper(lr, momentum):\n",
     "    import argparse\n",
@@ -26,6 +54,7 @@
     "    import torch.nn.functional as F\n",
     "    import torch.optim as optim\n",
     "    from torchvision import datasets, transforms\n",
+    "    from torch.utils.tensorboard import SummaryWriter \n",
     "    import os\n",
     "    from hops import tensorboard\n",
     "    from hops import hdfs\n",
@@ -49,7 +78,7 @@
     "            x = self.fc2(x)\n",
     "            return F.log_softmax(x, dim=1)\n",
     "\n",
-    "    def train(model, device, train_loader, optimizer):\n",
+    "    def train(model, device, train_loader, optimizer, writer):\n",
     "        model.train()\n",
     "        for batch_idx, (data, target) in enumerate(train_loader):\n",
     "            data, target = data.to(device), target.to(device)\n",
@@ -62,6 +91,7 @@
     "                print('[{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
     "                    batch_idx * len(data), len(train_loader.dataset),\n",
     "                    100. * batch_idx / len(train_loader), loss.item()))\n",
+    "                writer.add_scalar('Loss/train', loss.item(), batch_idx)\n",
     "\n",
     "    def test(model, device, test_loader):\n",
     "        model.eval()\n",
@@ -92,13 +122,16 @@
     "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
     "\n",
     "    kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
+    "    \n",
+    "    # Set SummaryWriter to point to the local directory containing the tensorboard logs\n",
+    "    writer = SummaryWriter(log_dir=tensorboard.logdir())    \n",
     "\n",
     "    # The same working directory may be used multiple times if running multiple experiments\n",
     "    # Make sure we only download the dataset once\n",
-    "    if not os.path.exists(os.getcwd() + '/processed'):\n",
+    "    if not os.path.exists(os.getcwd() + '/MNIST'):\n",
     "        hdfs.log('----Downloading dataset to Spark executor working directory----')\n",
     "        #Copy dataset from project to local filesystem\n",
-    "        hdfs.copy_to_local('TourData/mnist/processed')\n",
+    "        hdfs.copy_to_local('TourData/mnist/MNIST')\n",
     "        hdfs.log('----------------------Download finished------------------------')\n",
     "    train_loader = torch.utils.data.DataLoader(\n",
     "        datasets.MNIST(os.getcwd(), train=True, download=False,\n",
@@ -120,32 +153,44 @@
     "    optimizer = optim.SGD(model.parameters(), lr=lr, momentum=momentum)\n",
     "\n",
     "    #Single epoch\n",
-    "    train(model, device, train_loader, optimizer)\n",
+    "    train(model, device, train_loader, optimizer, writer)\n",
     "    acc = test(model, device, test_loader)\n",
     "    \n",
     "    # No need to save model when doing hyperparameter optimization\n",
     "    # torch.save(model.state_dict(), tensorboard.logdir() + \"mnist_cnn.pt\")\n",
     "    \n",
-    "    return acc\n"
+    "    return acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "search_dict = {'lr': [0.1, 0.001], 'momentum': [0.1, 0.9]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 0 || average metric: 98.81800000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Generation 1 || average metric: 98.82000000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Generation 2 || average metric: 98.82000000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Generation 3 || average metric: 98.82000000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Generation 4 || average metric: 98.82000000000001, best metric: 98.92, best parameter combination: ['lr=0.1', 'momentum=0.5231567238497797']\n",
+      "\n",
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://10.0.208.8:8020/Projects/demo_deep_learning_admin000/Experiments/application_1573559087487_0009/differential_evolution/run.1', {'lr': '0.1', 'momentum': '0.5231567238497797'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
-    "# Simple experiment, local_logdir=True to write to local FS and not HDFS (Look in Experiments dataset for contents after experiment)\n",
+    "\n",
+    "search_dict = {'lr': [0.1, 0.001], 'momentum': [0.1, 0.9]}\n",
     "experiment.differential_evolution(wrapper, search_dict, generations=4, population=5, local_logdir=True, direction='max')"
    ]
   }
@@ -167,5 +212,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
