[HOPSWORKS-1498] hops-util-py can't find attributes

--- a/notebooks/ml/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/notebooks/ml/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -860,8 +860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_schema = kafka.get_schema(TOPIC_NAME)\n",
-    "avro_schema = kafka.convert_json_schema_to_avro(json_schema)"
+    "avro_schema = kafka.get_schema(TOPIC_NAME)\n"
    ]
   },
   {
