[HOPSWORKS-1498][append] hops-util-py can't find attributes

--- a/notebooks/ml/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/notebooks/ml/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -860,7 +860,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avro_schema = kafka.get_schema(TOPIC_NAME)\n"
+    "json_schema = kafka.get_schema(TOPIC_NAME)\n",
+    "avro_schema = kafka.convert_json_schema_to_avro(json_schema)"
    ]
   },
   {
